2005-07-24  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/support.c:
	* engines/clearlooks/src/support.h:

	Updated clearlooks engine

2005-07-09  Thomas Wood  <thos@gnome.org>

	* configure.ac: Update for 2.6.4
	* engines/lighthouseblue/src/lighthouseblue_style.c: (draw_option): Fixes bug 303112
	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	(do_smooth_draw_box), (smooth_draw_box): Fixes bug 308551
	* engines/smooth/src/engine/smooth_gtk2_misc.c:
	(gtk_button_get_props): Fixes bug 305432
	* themes/Industrial/gtk-2.0/gtkrc: Fixes bug 170824

2005-05-14  Glynn Foster  <glynn.foster@sun.com>

	* engines/clearlooks/Makefile.am: Install into the correct
	directory. Fixes #300530.

2005-04-12  Thomas Wood  <thos@gnome.org>

	* NEWS: Updated for 2.6.3
	* configure.ac:
	* engines/clearlooks/Makefile.am:
	* engines/clearlooks/src/clearlooks_draw.c: (cl_draw_borders),
	(cl_draw_line), (cl_get_gradient_corner_color), (cl_draw_corner),
	(cl_draw_fill), (cl_progressbar_tile_new),
	(cl_draw_menuitem_button), (cl_draw_menuitem_flat),
	(cl_draw_menuitem_gradient):
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init), (theme_parse_progressbarstyle),
	(theme_parse_menubarstyle), (theme_parse_listviewitemstyle),
	(clearlooks_rc_style_parse), (clearlooks_rc_style_merge):
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c: (draw_flat_box),
	(draw_box_gap), (draw_extension), (draw_box), (draw_shadow_gap),
	(draw_hline), (clearlooks_style_init_from_rc),
	(clearlooks_style_class_init):
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/support.c:
	(internel_image_buffer_free_pixels), (internal_image_buffer_new),
	(internal_color_get_as_uchars),