@@ -9,11 +9,13 @@ extern void eazel_engine_stock_table_unref (eazel_engine_stock_table *table);
 extern eazel_engine_stock_table *eazel_engine_stock_table_ref (eazel_engine_stock_table *table);
 extern void eazel_engine_stock_pixmap_and_mask (eazel_engine_stock_table *table,
 						eazel_engine_stock_image type,
+						GdkScreen *screen,
 						GdkPixmap **image,
 						GdkBitmap **mask);
 extern void eazel_engine_stock_pixmap_and_mask_scaled (eazel_engine_stock_table *table,
 						       eazel_engine_stock_image type,
 						       int width, int height,
+						       GdkScreen *screen,
 						       GdkPixmap **image,
 						       GdkBitmap **mask);
 extern void eazel_engine_stock_free_pixmaps (eazel_engine_stock_table *table,
